--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="madeBy">จัดทำโดย</string>
     <string name="myName">นายพงษ์ศิริ หลักงาม 59160586</string>
     <string name="aboutFragment">About</string>
+    <string name="shareWord">Welcome to ma App</string>
 </resources>
